fixup! Use Map.of() instead of Collections.emptyMap()